<resources>
    <string name="app_name">ToDoList</string>
    <string name="action_settings">设置</string>
    <string name="todo_title">标    题</string>
    <string name="todo_title_hint">请输入标题</string>
    <string name="beizhu">备    注</string>
    <string name="beizhu_hint">请输入备注</string>
    <string name="tianjia">确    定</string>
    <string name="tv_degree">重要程度</string>
    <string name="date_picker_title">Date of Todo :</string>
    <string name="tv_date">时    间</string>

    <string name="icon_about">icon_about</string>
    <string name="version">1.0</string>
    <string name="slogan">Happy EveryDay</string>
    <string name="year_from_to">©2019–2019 lvtong.com\nAll rights reserved.</string>
    <string name="open_source">开源相关</string>
    <string name="about_us">关于</string>

    <string name="pref_top_imageview_switch">top_imageview_switch</string>
    <string name="myDay">我的一天</string>
    <string name="task">任务</string>
    <string name="check_update">检查更新</string>
    <string name="pref_button_vibrate">button_vibrate</string>
    <string name="no_todo_please_add">没有待办事项\n点击右下角添加</string>
    <string name="click_date">点击选择日期</string>
    <string name="button_importance">点击选择重要程度</string>

</resources>
